--- a/index.html
+++ b/index.html
@@ -11,32 +11,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>La machine à relativiser le temps</h1>
-    </header>
-    <main>
-        <h2>Quel âge avez-vous sur les autres planètes du système solaire?</h2>
-        <form>
-            <label for="age">Votre âge sur Terre</label>
-            <input type="number" id="age" name="age">
-            <label for="planet">Choisissez une planète</label>
-            <select id="planet" name="planet">
-                <option value="mercure">Mercure</option>
-                <option value="venus">Venus</option>
-                <option value="mars">Mars</option>
-                <option value="jupiter">Jupiter</option>
-                <option value="saturne">Saturne</option>
-                <option value="uranus">Uranus</option>
-                <option value="neptune">Neptune</option>
-                <option value="pluton">Pluton</option>
-            </select>
-            <button type="submit">C'est parti !</button>
-        </form>
-        <div id="results"></div>
-    </main>
-    <footer>
-
-    </footer>
-	<script src="script.js"></script>
+        <header>
+            <h1>La machine à relativiser le temps</h1>
+        </header>
+        <main>
+            <h2>Quel âge avez-vous sur les autres planètes du système solaire?</h2>
+            <form>
+                <label for="age">Votre âge sur Terre</label>
+                <input type="number" id="age" name="age">
+                <label for="planet">Choisissez une planète</label>
+                <select id="planet" name="planet">
+                    <option value="mercure">Mercure</option>
+                    <option value="venus">Venus</option>
+                    <option value="mars">Mars</option>
+                    <option value="jupiter">Jupiter</option>
+                    <option value="saturne">Saturne</option>
+                    <option value="uranus">Uranus</option>
+                    <option value="neptune">Neptune</option>
+                    <option value="pluton">Pluton</option>
+                </select>
+                <button type="submit">C'est parti !</button>
+            </form>
+            <div id="results"></div>
+        </main>
+        <footer>
+            <p>Lien portfolio</p>
+            <p>Lien github sego</p>
+            <p>This website is provided for you by Ségolène Henniart</p>
+        </footer>
+        <script src="script.js"></script>
 </body>
 </html>
